# automation-practise

./: README.md
vue/:  CONTRIBUTING.md  .env.example  .eslintrc.cjs  README.md  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json  types.d.ts
vue/scripts/: install.sh
vue/src/: main.py  utils.py
vue/src/sfcCompiler/: index.ts  sfcToJS.ts  utils.ts
vue/src/templates/base/: autofill_code_blocks.py  autofill_code_snippets.py  bootstrapFreeVersion.ts  config.ts  fillSnippets.ts  genDemo.ts  genJS.ts  genNuxtDemos.ts  genPkg.ts  genSK.ts  gtmConfig.ts  helper.ts  laravel.ts  nuxt.old.ts  nuxt.ts  settings.py  template.py  template.ts  ts_converter.py
vue/src/templates/base/data/: deploy-laravel-demos.yml  deploy-nuxt-demos.yml  deploy-nuxt-free-demo.yml  release-laravel.yml
vue/src/templates/master/: __init__.py  config.ts  settings.py  template.py  template.ts
vue/src/templates/master/data/: tracker.json
vue/src/templates/master/scripts/: copyFromFreeInternal.ts  fillSnippets.ts  (+8 more)
vue/src/templates/materialize/: config.ts  template.ts
vue/src/templates/materio/: __init__.py  config.ts  settings.py  template.py  template.ts
vue/src/templates/pi/: template.ts
vue/src/templates/sneat/: config.ts  template.ts
vue/src/templates/ts/: index.ts  template.ts
vue/src/templates/vuexy/: config.ts  template.ts
vue/src/utils/: cli.ts  conversions.ts  file.ts  injectMustMatch.ts  injectMustReplace.ts  logging.ts  node.ts  paths.ts  string.ts  temp.ts  template.ts
vue/tests/master/: test_fill-code-snippets.py
vue/tests/utils/: test_to_camel_case.py
(+303 files in other folders)
